@@ -773,7 +773,10 @@ void COgreMeshFileLoader::composeObject(void)
 			ISkinnedMesh::SJoint* joint = m->addJoint();
 			joint->Name=Skeleton.Bones[i].Name;
 
-			joint->LocalMatrix = Skeleton.Bones[i].Orientation.getMatrix();
+			// IRR_TEST_BROKEN_QUATERNION_USE: TODO - switched to getMatrix_transposed instead of getMatrix for downward compatibility. 
+			//								   Not tested so far if this was correct or wrong before quaternion fix!
+			Skeleton.Bones[i].Orientation.getMatrix_transposed(joint->LocalMatrix);
+
 			if (Skeleton.Bones[i].Scale != core::vector3df(1,1,1))
 			{
 				core::matrix4 scaleMatrix;
@@ -823,7 +826,11 @@ void COgreMeshFileLoader::composeObject(void)
 				poskey->position=keyjoint->LocalMatrix.getTranslation()+frame.Position;
 				ISkinnedMesh::SRotationKey* rotkey = m->addRotationKey(keyjoint);
 				rotkey->frame=frame.Time*25;
-				rotkey->rotation=core::quaternion(keyjoint->LocalMatrix)*frame.Orientation;
+
+				// IRR_TEST_BROKEN_QUATERNION_USE: TODO - switched from keyjoint->LocalMatrix to keyjoint->LocalMatrix.getTransposed() for downward compatibility. 
+				//								   Not tested so far if this was correct or wrong before quaternion fix!
+				rotkey->rotation=core::quaternion(keyjoint->LocalMatrix.getTransposed())*frame.Orientation;
+
 				ISkinnedMesh::SScaleKey* scalekey = m->addScaleKey(keyjoint);
 				scalekey->frame=frame.Time*25;
 				scalekey->scale=frame.Scale;
